<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TreeHouse</string>

    <!-- Splash -->
    <string name="splash_version">Version 0.3.10</string>

    <!-- Login -->
    <string name="login_step_welcome_subtitle">Let\'s get connected</string>
    <string name="login_add_server">Add Server</string>
    <string name="login_step_server_subtitle">Connect to your Jellyfin server</string>
    <string name="login_step_credentials_subtitle">Sign in to your account</string>
    <string name="login_server_address_hint">http://192.168.1.10:8096</string>
    <string name="login_continue">Continue</string>
    <string name="login_username_title">Username</string>
    <string name="login_password_title">Password</string>
    <string name="login_quick_connect_title">Sign in with Quick Connect</string>
    <string name="login_sign_in_title">Sign in</string>
    <string name="login_connecting">Connecting…</string>
    <string name="login_error_generic">Could not sign in. Check the server address and credentials.</string>
    <string name="login_error_401">Server rejected the connection (not a wrong password) - check its remote-access network settings, especially if you\'re connecting over a VPN like Tailscale.</string>
    <string name="login_quick_connect_code_format">Enter code %1$s in another Jellyfin app or web page</string>

    <!-- Profile picker -->
    <string name="profile_select_title">Who\'s Watching?</string>
    <string name="profile_add">Add Profile</string>
    <string name="profile_switch_server">Switch Server</string>

    <!-- Server list -->
    <string name="server_list_title">Servers</string>
    <string name="server_add">Add Server</string>
    <string name="server_current">Current</string>

    <!-- Home -->
    <string name="home_error">Could not load libraries from the server.</string>
    <string name="app_logo">TreeHouse</string>
    <string name="nav_home">Home</string>
    <string name="nav_account">Account</string>
    <string name="home_continue_watching">Pick up where you left off</string>
    <string name="continue_watching_episode_format">S%1$d E%2$d</string>

    <!-- User menu -->
    <string name="user_menu_info">Info</string>
    <string name="user_menu_logout">Log Out</string>
    <string name="user_menu_change_server">Change Server</string>
    <string name="user_menu_scan_library">Scan Library</string>
    <string name="user_menu_info_format">Signed in as %1$s\n%2$s</string>
    <string name="library_scan_started">Library scan started</string>
    <string name="library_scan_failed">Could not start a library scan</string>

    <!-- Details -->
    <string name="details_play">Play</string>
    <string name="details_resume">Resume</string>
    <string name="details_watchlist">Watchlist</string>
    <string name="details_watchlisted">In Watchlist</string>
    <string name="details_starring_format">Starring: %1$s</string>

    <!-- Playback -->
    <string name="playback_error">Playback failed.</string>
    <string name="playback_mode_direct">Direct play</string>
    <string name="playback_mode_transcode">Transcoding</string>
    <string name="playback_play">Play</string>
    <string name="playback_pause">Pause</string>
    <string name="playback_rewind">Rewind 10 seconds</string>
    <string name="playback_forward">Forward 10 seconds</string>
    <string name="playback_next_episode">Next episode</string>
    <string name="playback_skip_intro">Skip Intro</string>
    <string name="playback_up_next_format">Up Next: %1$s</string>
    <string name="playback_play_now">Play Now</string>
    <string name="playback_audio_track">Audio</string>
    <string name="playback_subtitle_track">Subtitles</string>
    <string name="playback_subtitles_off">Off</string>
</resources>
